# tsys01

./: .gitignore  README.md  specification
CubeMX/TSYS01/: .mxproject  TSYS01.ioc  TSYS01.txt
Report/: main.tex
STM32/: Readme.md
STM32/2sensors_logging/: Readme  main.c
STM32/TSYS_controller/: 2DO  Makefile  Readme.md  adc.c  can.c  can.h  can_process.c  can_process.h  hardware.c  hardware.h  i2c.c  main.c  proto.c  proto.h  sensors_manage.c  sensors_manage.h  strfunc.c  strfunc.h  tmp_UPGWJZ.d  tsys01.c.tags  tsys01.geany  usart.c  usart.h  usb.c  usb_lib.c  version.inc
STM32/Tcalc/: Readme.md  hardware.h  main.c  tsys01.c.tags  tsys01.geany  usart.c  usart.h
STM32/Tcalc_screen/: hardware.c  hardware.h  i2c.h  main.c  spi.c  spi.h  ssd1306.c  tsys01.c.tags  tsys01.geany
STM32/Tcalc_screen_ver2/: Makefile  Readme.md  hardware.c  hardware.h  i2c.h  main.c  proto.c  proto.h  spi.c  ssd1306.c  ssd1306.h  usart.h  usb.c  usb_defs.h  usb_lib.c
STM32/inc/: stm32f042.c.tags
STM32/src4multiplexer/: Makefile  Readme.md  Readme.pinout  hardware.c  i2c.h  main.c  tsys01.c.tags  tsys01.geany  usart.c  usart.h
doc/: main.tex
kicad/: fp-lib-table  sym-lib-table  tsys01-B.Cu.gbr  tsys01-B.Mask.gbr  tsys01-B.SilkS.gbr  tsys01-F.Cu.gbr  tsys01-F.Mask.gbr  tsys01-F.SilkS.gbr  tsys01-cache.lib  tsys01-drl_map.gbr  tsys01-rescue.lib  tsys01.kicad_pcb  tsys01.kicad_pcb-bak  tsys01.kicad_prl  tsys01.kicad_pro  tsys01.net  tsys01.pro  tsys01.sch  tsys01_singleside.kicad_pcb
kicad/RJ45_plate/: RJ45_plate.kicad_pcb  RJ45_plate.net  RJ45_plate.pro  RJ45_plate.sch  fp-lib-table
kicad/multiplexer/: 8chblock.sch  fp-lib-table  mk_copy  multiplexer.kicad_pcb  multiplexer.kicad_pcb_bk  multiplexer.net  multiplexer.pro  multiplexer.sch
kicad/rescue-backup/: sym-lib-table-2021-07-31-22-20-22  (+3 more)
m-files/: plotdt.m  plotpair.m  readtemp.m  testval.m
src/: Makefile  Readme.md  cmdlnopts.c  cmdlnopts.h  log  main.c  readtemp.m  term.c  term.h  tsys_daemon  usefull_macros.c  usefull_macros.h
src/temp_logging/: CMakeLists.txt  cmdlnopts.c  cmdlnopts.h  logger.c
src/temp_logging/logs/: README  plotgr.m  rdfile.m
(+126 files in other folders)
